src/main/java/ag223pi/dv507/a4/OFPParser.java
// Generated from /Users/mnktech/Documents/School/4DV507/main/src/main/java/ag223pi/dv507/a2/OFP.g4 by ANTLR 4.8

package ag223pi.dv507.a4;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class OFPParser extends Parser {
	static {
		RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
	public static final int T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
			T__9 = 10, T__10 = 11, BOOLEAN = 12, CHAR = 13, FLOAT = 14, INT = 15, IF = 16, ELSE_IF = 17, ELSE = 18,
			MAIN = 19, NEW = 20, RETURN = 21, STRING = 22, VOID = 23, WHILE = 24, ASSIGN = 25, GT = 26, LT = 27,
			EQUAL = 28, ADD = 29, SUB = 30, MUL = 31, DIV = 32, SINGLE_Q = 33, DOUBLE_Q = 34, SEMICOLON = 35,
			INTEGER_LITERAL = 36, FLOAT_LITERAL = 37, BOOLEAN_LITERAL = 38, CHAR_LITERAL = 39, STRING_LITERAL = 40,
			IDENTIFIER = 41, WS = 42, LINE_COMMENT = 43;
	public static final int RULE_program = 0, RULE_main = 1, RULE_mainDeclaration = 2, RULE_function = 3,
			RULE_functionDeclaration = 4, RULE_parameters = 5, RULE_arguments = 6, RULE_dataType = 7, RULE_id = 8,
			RULE_literal = 9, RULE_statement = 10, RULE_varDeclaration = 11, RULE_varInitialization = 12,
			RULE_varAssignment = 13, RULE_printStmt = 14, RULE_whileStmt = 15, RULE_ifStmt = 16, RULE_elseifStmt = 17,
			RULE_elseStmt = 18, RULE_returnStmt = 19, RULE_expression = 20, RULE_arrayExpression = 21,
			RULE_functionInvocation = 22, RULE_comparisson = 23, RULE_calculation = 24;

	private static String[] makeRuleNames() {
		return new String[] { "program", "main", "mainDeclaration", "function", "functionDeclaration", "parameters",
				"arguments", "dataType", "id", "literal", "statement", "varDeclaration", "varInitialization",
				"varAssignment", "printStmt", "whileStmt", "ifStmt", "elseifStmt", "elseStmt", "returnStmt",
				"expression", "arrayExpression", "functionInvocation", "comparisson", "calculation" };
	}

	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] { null, "'{'", "'}'", "'('", "')'", "','", "'['", "']'", "'println'", "'print'", "'.'",
				"'length'", "'bool'", "'char'", "'float'", "'int'", "'if'", "'else if'", "'else'", "'main'", "'new'",
				"'return'", "'string'", "'void'", "'while'", "'='", "'>'", "'<'", "'=='", "'+'", "'-'", "'*'", "'/'",
				"'''", "'\"'", "';'" };
	}

	private static final String[] _LITERAL_NAMES = makeLiteralNames();

	private static String[] makeSymbolicNames() {
		return new String[] { null, null, null, null, null, null, null, null, null, null, null, null, "BOOLEAN", "CHAR",
				"FLOAT", "INT", "IF", "ELSE_IF", "ELSE", "MAIN", "NEW", "RETURN", "STRING", "VOID", "WHILE", "ASSIGN",
				"GT", "LT", "EQUAL", "ADD", "SUB", "MUL", "DIV", "SINGLE_Q", "DOUBLE_Q", "SEMICOLON", "INTEGER_LITERAL",
				"FLOAT_LITERAL", "BOOLEAN_LITERAL", "CHAR_LITERAL", "STRING_LITERAL", "IDENTIFIER", "WS",
				"LINE_COMMENT" };
	}

	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() {
		return "OFP.g4";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public OFPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public MainContext main() {
			return getRuleContext(MainContext.class, 0);
		}

		public TerminalNode EOF() {
			return getToken(OFPParser.EOF, 0);
		}

		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}

		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class, i);
		}

		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_program;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof OFPListener)
				((OFPListener) listener).enterProgram(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof OFPListener)
				((OFPListener) listener).exitProgram(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof OFPVisitor)
				return ((OFPVisitor<? extends T>) visitor).visitProgram(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(53);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
				while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
					if (_alt == 1) {
						{
							{
								setState(50);
								function();
							}
						}
					}
					setState(55);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
				}
				setState(56);
				main();
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLEAN) | (1L << CHAR) | (1L << FLOAT)
						| (1L << INT) | (1L << STRING) | (1L << VOID))) != 0)) {
					{
						{
							setState(57);
							function();
						}
					}
					setState(62);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(63);
				match(EOF);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public MainDeclarationContext mainDeclaration() {
			return getRuleContext(MainDeclarationContext.class, 0);
		}

		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}

		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class, i);
		}

		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}

		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class, i);
		}

		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}

		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class, i);
		}

		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_main;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof OFPListener)
				((OFPListener) listener).enterMain(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof OFPListener)
				((OFPListener) listener).exitMain(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof OFPVisitor)
				return ((OFPVisitor<? extends T>) visitor).visitMain(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(65);
				mainDeclaration();
				setState(66);
				match(T__0);
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__7) | (1L << T__8)
						| (1L << BOOLEAN) | (1L << CHAR) | (1L << FLOAT) | (1L << INT) | (1L << IF) | (1L << NEW)
						| (1L << RETURN) | (1L << STRING) | (1L << VOID) | (1L << WHILE) | (1L << IDENTIFIER))) != 0)) {
					{
						setState(70);
						_errHandler.sync(this);
						switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
						case 1: {
							setState(67);
							function();
						}
							break;
						case 2: {
							setState(68);
							statement();
						}
							break;
						case 3: {
							setState(69);
							expression();
						}
							break;
						}
					}
					setState(74);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(75);
				match(T__1);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainDeclarationContext extends ParserRuleContext {
		public TerminalNode VOID() {
			return getToken(OFPParser.VOID, 0);
		}

		public TerminalNode MAIN() {
			return getToken(OFPParser.MAIN, 0);
		}

		public MainDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_mainDeclaration;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof OFPListener)
				((OFPListener) listener).enterMainDeclaration(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof OFPListener)
				((OFPListener) listener).exitMainDeclaration(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof OFPVisitor)
				return ((OFPVisitor<? extends T>) visitor).visitMainDeclaration(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final MainDeclarationContext mainDeclaration() throws RecognitionException {
		MainDeclarationContext _localctx = new MainDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_mainDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(77);
				match(VOID);
				setState(78);
				match(MAIN);
				setState(79);
				match(T__2);
				setState(80);
				match(T__3);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class, 0);
		}

		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}

		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class, i);
		}

		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}

		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class, i);
		}

		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_function;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof OFPListener)
				((OFPListener) listener).enterFunction(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof OFPListener)
				((OFPListener) listener).exitFunction(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof OFPVisitor)
				return ((OFPVisitor<? extends T>) visitor).visitFunction(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(82);
				functionDeclaration();
				setState(83);
				match(T__0);
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__7) | (1L << T__8)
						| (1L << BOOLEAN) | (1L << CHAR) | (1L << FLOAT) | (1L << INT) | (1L << IF) | (1L << NEW)
						| (1L << RETURN) | (1L << STRING) | (1L << WHILE) | (1L << IDENTIFIER))) != 0)) {
					{
						setState(86);
						_errHandler.sync(this);
						switch (getInterpreter().adaptivePredict(_input, 4, _ctx)) {
						case 1: {
							setState(84);
							statement();
						}
							break;
						case 2: {
							setState(85);
							expression();
						}
							break;
						}
					}
					setState(90);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(91);
				match(T__1);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDeclarationContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class, 0);
		}

		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class, 0);
		}

		public TerminalNode VOID() {
			return getToken(OFPParser.VOID, 0);
		}

		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class, 0);
		}

		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_functionDeclaration;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof OFPListener)
				((OFPListener) listener).enterFunctionDeclaration(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof OFPListener)
				((OFPListener) listener).exitFunctionDeclaration(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof OFPVisitor)
				return ((OFPVisitor<? extends T>) visitor).visitFunctionDeclaration(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(95);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case BOOLEAN:
				case CHAR:
				case FLOAT:
				case INT:
				case STRING: {
					setState(93);
					dataType();
				}
					break;
				case VOID: {
					setState(94);
					match(VOID);
				}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(97);
				id();
				setState(98);
				match(T__2);
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la)
						& ((1L << BOOLEAN) | (1L << CHAR) | (1L << FLOAT) | (1L << INT) | (1L << STRING))) != 0)) {
					{
						setState(99);
						parameters();
					}
				}

				setState(102);
				match(T__3);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametersContext extends ParserRuleContext {
		public List<DataTypeContext> dataType() {
			return getRuleContexts(DataTypeContext.class);
		}

		public DataTypeContext dataType(int i) {
			return getRuleContext(DataTypeContext.class, i);
		}

		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}

		public IdContext id(int i) {
			return getRuleContext(IdContext.class, i);
		}

		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_parameters;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof OFPListener)
				((OFPListener) listener).enterParameters(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof OFPListener)
				((OFPListener) listener).exitParameters(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof OFPVisitor)
				return ((OFPVisitor<? extends T>) visitor).visitParameters(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_parameters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
						{
							setState(104);
							dataType();
							setState(105);
							id();
							setState(107);
							_errHandler.sync(this);
							_la = _input.LA(1);
							if (_la == T__4) {
								{
									setState(106);
									match(T__4);
								}
							}

						}
					}
					setState(111);
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ((((_la) & ~0x3f) == 0 && ((1L << _la)
						& ((1L << BOOLEAN) | (1L << CHAR) | (1L << FLOAT) | (1L << INT) | (1L << STRING))) != 0));
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentsContext extends ParserRuleContext {
		public List<ComparissonContext> comparisson() {
			return getRuleContexts(ComparissonContext.class);
		}

		public ComparissonContext comparisson(int i) {
			return getRuleContext(ComparissonContext.class, i);
		}

		public List<CalculationContext> calculation() {
			return getRuleContexts(CalculationContext.class);
		}

		public CalculationContext calculation(int i) {
			return getRuleContext(CalculationContext.class, i);
		}

		public List<LiteralContext> literal() {
			return getRuleContexts(LiteralContext.class);
		}

		public LiteralContext literal(int i) {
			return getRuleContext(LiteralContext.class, i);
		}

		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}

		public IdContext id(int i) {
			return getRuleContext(IdContext.class, i);
		}

		public ArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_arguments;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof OFPListener)
				((OFPListener) listener).enterArguments(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof OFPListener)
				((OFPListener) listener).exitArguments(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof OFPVisitor)
				return ((OFPVisitor<? extends T>) visitor).visitArguments(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ArgumentsContext arguments() throws RecognitionException {
		ArgumentsContext _localctx = new ArgumentsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_arguments);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
						{
							setState(117);
							_errHandler.sync(this);
							switch (getInterpreter().adaptivePredict(_input, 10, _ctx)) {
							case 1: {
								setState(113);
								comparisson();
							}
								break;
							case 2: {
								setState(114);
								calculation(0);
							}
								break;
							case 3: {
								setState(115);
								literal();
							}
								break;
							case 4: {
								setState(116);
								id();
							}
								break;
							}
							setState(120);
							_errHandler.sync(this);
							_la = _input.LA(1);
							if (_la == T__4) {
								{
									setState(119);
									match(T__4);
								}
							}

						}
					}
					setState(124);
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << NEW)
						| (1L << INTEGER_LITERAL) | (1L << FLOAT_LITERAL) | (1L << BOOLEAN_LITERAL)
						| (1L << CHAR_LITERAL) | (1L << STRING_LITERAL) | (1L << IDENTIFIER))) != 0));
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataTypeContext extends ParserRuleContext {
		public TerminalNode INT() {
			return getToken(OFPParser.INT, 0);
		}

		public CalculationContext calculation() {
			return getRuleContext(CalculationContext.class, 0);
		}

		public TerminalNode FLOAT() {
			return getToken(OFPParser.FLOAT, 0);
		}

		public TerminalNode BOOLEAN() {
			return getToken(OFPParser.BOOLEAN, 0);
		}

		public TerminalNode CHAR() {
			return getToken(OFPParser.CHAR, 0);
		}

		public TerminalNode STRING() {
			return getToken(OFPParser.STRING, 0);
		}

		public DataTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_dataType;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof OFPListener)
				((OFPListener) listener).enterDataType(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof OFPListener)
				((OFPListener) listener).exitDataType(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof OFPVisitor)
				return ((OFPVisitor<? extends T>) visitor).visitDataType(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final DataTypeContext dataType() throws RecognitionException {
		DataTypeContext _localctx = new DataTypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_dataType);
		int _la;
		try {
			setState(152);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
				enterOuterAlt(_localctx, 1); {
				setState(126);
				match(INT);
				setState(132);
				_errHandler.sync(this);
				switch (getInterpreter().adaptivePredict(_input, 14, _ctx)) {
				case 1: {
					setState(127);
					match(T__5);
					setState(129);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << NEW)
							| (1L << INTEGER_LITERAL) | (1L << FLOAT_LITERAL) | (1L << BOOLEAN_LITERAL)
							| (1L << CHAR_LITERAL) | (1L << STRING_LITERAL) | (1L << IDENTIFIER))) != 0)) {
						{
							setState(128);
							calculation(0);
						}
					}

					setState(131);
					match(T__6);
				}
					break;
				}
			}
				break;
			case FLOAT:
				enterOuterAlt(_localctx, 2); {
				setState(134);
				match(FLOAT);
				setState(140);
				_errHandler.sync(this);
				switch (getInterpreter().adaptivePredict(_input, 16, _ctx)) {
				case 1: {
					setState(135);
					match(T__5);
					setState(137);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << NEW)
							| (1L << INTEGER_LITERAL) | (1L << FLOAT_LITERAL) | (1L << BOOLEAN_LITERAL)
							| (1L << CHAR_LITERAL) | (1L << STRING_LITERAL) | (1L << IDENTIFIER))) != 0)) {
						{
							setState(136);
							calculation(0);
						}
					}

					setState(139);
					match(T__6);
				}
					break;
				}
			}
				break;
			case BOOLEAN:
				enterOuterAlt(_localctx, 3); {
				setState(142);
				match(BOOLEAN);
			}
				break;
			case CHAR:
				enterOuterAlt(_localctx, 4); {
				setState(143);
				match(CHAR);
				setState(149);
				_errHandler.sync(this);
				switch (getInterpreter().adaptivePredict(_input, 18, _ctx)) {
				case 1: {
					setState(144);
					match(T__5);
					setState(146);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << NEW)
							| (1L << INTEGER_LITERAL) | (1L << FLOAT_LITERAL) | (1L << BOOLEAN_LITERAL)
							| (1L << CHAR_LITERAL) | (1L << STRING_LITERAL) | (1L << IDENTIFIER))) != 0)) {
						{
							setState(145);
							calculation(0);
						}
					}

					setState(148);
					match(T__6);
				}
					break;
				}
			}
				break;
			case STRING:
				enterOuterAlt(_localctx, 5); {
				setState(151);
				match(STRING);
			}
				break;
			default:
				throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() {
			return getToken(OFPParser.IDENTIFIER, 0);
		}

		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_id;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof OFPListener)
				((OFPListener) listener).enterId(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof OFPListener)
				((OFPListener) listener).exitId(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof OFPVisitor)
				return ((OFPVisitor<? extends T>) visitor).visitId(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_id);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(154);
				match(IDENTIFIER);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public TerminalNode INTEGER_LITERAL() {
			return getToken(OFPParser.INTEGER_LITERAL, 0);
		}
